--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 <body> <!-- Visible content starts here -->
 <!-- Additional: The body contains all the visible elements of the page -->
   <main style="max-width:980px;margin:0 auto;padding:20px;"> <!-- Main container, centred, limited width -->
-    <header style="background:linear-gradient(135deg,#019dd5,#00bfff);color:#fff;padding:24px;border-radius:12px;"> <!-- Header with gradient background -->
+    <header style="background:linear-gradient(135deg,orange,#f2ff00);color:#fff;padding:24px;border-radius:12px;"> <!-- Header with gradient background -->
       <h1 style="margin:0 0 6px;">Habit Tracker</h1> <!-- Main title -->
-      <p style="margin:0;">Add habits, tick your day, and keep your streaks going</p> <!-- Tagline -->
+      <p style="margin:0;">Commit on changing yourself, for yourself!</p> <!-- Tagline -->
     </header>
-    <section style="background:#e8f9ff;border-left:6px solid #019dd5;padding:12px;border-radius:8px;margin:12px 0 16px;" aria-live="polite"> <!-- Tip box with blue border -->
+    <section style="background:#fcffc2;border-left:6px solid orange;padding:12px;border-radius:8px;margin:12px 0 16px;" aria-live="polite"> <!-- Tip box with blue border -->
       <strong>Tip:</strong> Click a day cell to toggle. Use Tab to focus, then Space or Enter to toggle.
     </section>
     <section style="background:#fff;border-radius:12px;padding:18px;margin:12px 0;box-shadow:0 1px 2px rgba(0,0,0,.04),0 4px 12px rgba(0,0,0,.04);" aria-labelledby="add-title"> <!-- Add habit form section -->
@@ -28,8 +28,8 @@
       <form id="habit-form" style="display:flex;gap:8px;align-items:center;"> <!-- Form to add new habit -->
         <label for="habit-name" class="sr-only">Habit name</label> <!-- Hidden label for accessibility -->
         <input id="habit-name" name="habitName" type="text" required placeholder="e.g. Drink two litres of water" autocomplete="off"
-               style="flex:1;padding:10px 12px;border:1px solid #dbe7f0;border-radius:8px;outline:none;"> <!-- Text input -->
-        <button type="submit" class="btn" style="background:#019dd5;color:#fff;border:none;padding:10px 14px;border-radius:8px;cursor:pointer;">Add</button> <!-- Submit button -->
+               style="flex:1;padding:10px 12px;border:1px solid #f2ff00;border-radius:8px;outline:none;"> <!-- Text input -->
+        <button type="submit" class="btn" style="background:orange;color:#fff;border:none;padding:10px 14px;border-radius:8px;cursor:pointer;">Add</button> <!-- Submit button -->
       </form>
     </section>
     <section style="background:#fff;border-radius:12px;padding:18px;margin:12px 0;box-shadow:0 1px 2px rgba(0,0,0,.04),0 4px 12px rgba(0,0,0,.04);" aria-labelledby="tracker-title"> <!-- Main tracker grid -->
@@ -67,12 +67,12 @@
     <section style="background:#fff;border-radius:12px;padding:18px;margin:12px 0;box-shadow:0 1px 2px rgba(0,0,0,.04),0 4px 12px rgba(0,0,0,.04);" aria-labelledby="manage-title"> <!-- Data management -->
       <h2 id="manage-title" style="margin:0 0 8px;color:#0b3b58;">Manage data</h2>
       <div style="display:flex;gap:8px;flex-wrap:wrap;">
-        <button id="export-json" style="background:#eef7ff;color:#046f95;border:none;padding:10px 14px;border-radius:8px;cursor:pointer;">Export JSON</button>
-        <label style="display:inline-flex;align-items:center;gap:8px;background:#eef7ff;color:#046f95;border:none;padding:10px 14px;border-radius:8px;cursor:pointer;">
+        <button id="export-json" style="background:#fcffc2;color:orangered;border:none;padding:10px 14px;border-radius:8px;cursor:pointer;">Export JSON</button>
+        <label style="display:inline-flex;align-items:center;gap:8px;background:#fcffc2;color:orangered;border:none;padding:10px 14px;border-radius:8px;cursor:pointer;">
           Import JSON
           <input id="import-json" type="file" accept="application/json" hidden> <!-- Hidden file input -->
         </label>
-        <button id="reset-all" style="background:#c71f23;color:#fff;border:none;padding:10px 14px;border-radius:8px;cursor:pointer;">Reset all</button>
+        <button id="reset-all" style="background:orangered;color:#fff;border:none;padding:10px 14px;border-radius:8px;cursor:pointer;">Reset all</button>
       </div>
       <p style="color:#66788a;font-size:.95rem;margin:10px 0 0;">Data is stored locally in your browser using localStorage.</p>
     </section>
