--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
       </div>
       <p style="color:#66788a;font-size:.95rem;margin:10px 0 0;">Data is stored locally in your browser using localStorage.</p>
     </section>
-    <footer style="color:#66788a;font-size:.95rem;margin:10px 0 0;">Built with HTML, CSS and JavaScript. No server required.</footer>
+    <footer style="color:#66788a;font-size:.95rem;margin:10px 0 0;">Built with HTML, CSS and JavaScript. No server required.
+      <p>Stefan Beatovic 2025</p>
+    </footer>
   </main>
   <script src="app.js" defer></script> <!-- Load JS after HTML, defer waits for parsing -->
 </body>
