--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div id="rows"></div> <!-- JS inserts habit rows here -->
       </div>
     </section>
-    <section id="calendar-section" class="calendar-container"> <!-- Calendar View Section -->
+    <section id="calendar-section" class="calendar-container"> <!-- Calendar View Section. New feature added to this project. -->
       <h2>Habit Calendar Overview</h2>
       <div class="calendar-header">
         <button id="prev-month" class="calendar-btn">&lt;</button>
